test/libsolidity/semanticTests/errors/via_contract_type.sol
contract A {
  error E(uint);
}
contract X {
  error E(string);
}
contract B is A {
  function f() public pure { revert E(1); }
  function g() public pure { revert A.E(1); }
  function h() public pure { revert X.E("abc"); }
  function encode_f() public pure returns (bytes memory) { return abi.encodeError(E, (1)); }
  function encode_g() public pure returns (bytes memory) { return abi.encodeError(A.E, (1)); }
  function encode_h() public pure returns (bytes memory) { return abi.encodeError(X.E, ("abc")); }
}
// ----
// f() -> FAILURE, hex"002ff067", hex"0000000000000000000000000000000000000000000000000000000000000001"
// g() -> FAILURE, hex"002ff067", hex"0000000000000000000000000000000000000000000000000000000000000001"
// h() -> FAILURE, hex"3e9992c9", hex"0000000000000000000000000000000000000000000000000000000000000020", hex"0000000000000000000000000000000000000000000000000000000000000003", hex"6162630000000000000000000000000000000000000000000000000000000000"
// encode_f() -> 0x20, 0x24, hex"002ff067", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"00000000000000000000000000000000000000000000000000000000"
// encode_g() -> 0x20, 0x24, hex"002ff067", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"00000000000000000000000000000000000000000000000000000000"
// encode_h() -> 0x20, 0x64, hex"3e9992c9", hex"0000000000000000000000000000000000000000000000000000000000000020", hex"0000000000000000000000000000000000000000000000000000000000000003", hex"6162630000000000000000000000000000000000000000000000000000000000", hex"00000000000000000000000000000000000000000000000000000000"
